<resources>
    <string name="app_name">JobAdda</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_about">About</string>
    <string name="interview">Client Interview</string>
    <string name="cv">CV Interview</string>
    <string name="admin">Profile</string>
    //variables

    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_or_mobile_no">Email or Mobile No.</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <!-- -
    This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
    For more information, see https://support.google.com/admob/answer/3052638
<!- -->
    <string name="ad_app_id">ca-app-pub-4119321529958098~8459175643</string>
    <string name="term_condition">Term and Condition\n
        1. Anuj Tech is only an advertisement app, we advise our user to cross the about Advertisement.\n
        2. Anuj Tech will not be responsible for any loss or damage whatsoever caused.\n
        3. We are using ads to support Anuj Tech App.\n
        4. Anuj Tech has the right to change term\'s and conditions.\n
        5. Gorakhpur(UP) jurisdiction only.\n
        6. The data collected are stored in cloud database.\n
        7. Developer can use or modify the data for app development.\n
        8. User can request data deletion by contacting developer.\n
        9. For any query contact us at: rameshwar.cpj@gmail.com</string>
</resources>